--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@semantic-ui-react/css-patch": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
-    "@semantic-ui-react/css-patch": "^1.0.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-http": "^1.5.17",
+    "graphql": "^15.8.0",
+    "graphql-tag": "^2.12.6",
+    "moment": "^2.29.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-router-dom": "^6.3.0",
