--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "apollo-link-http": "^1.5.17",
     "graphql": "^15.8.0",
     "graphql-tag": "^2.12.6",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.3",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
